--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "uniqid": "^5.4.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -18,6 +19,6 @@
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.4"
+    "vite": "^5.1.5"
   }
 }
